--- a/index.html
+++ b/index.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>hi</h1>
-</body>
-</html>>
+    <title>Kenny Johnson - Software Engineer </title>
+    <link rel="stylesheet" href="./style.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500;300;200;100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
+    <link rel="icon" type="image/png"  href="./imgs/favicon.png"> 
+    <script type="text/javascript" src="./script.js"></script>
+  </head> 
+
+  <body>
+      <div class="wrapper">
+        <div class="main-content">
+          <div class="logo-container animated js-fade-in">
+              <div class="logo">
+                  <div class="logo__header">
+                    kenny johnson
+                  </div>
+                  <div class="logo__subtitle">
+                    software engineer <a href="http://www.jeffhatchermusic.com" class="logo__drummer" target="blank">/ musician</a>
+                  </div>
+              </div>
+          </div>
+          <div class="projects-container">
+            <div class="projects">
+                <div class="project project--drama">
+                    <a href="https://github.com/kenny-johnson-nyc/drama_free_dinner_party" target="_blank" class="project__link">
+                      <span class="icon-text">Drama-Free Dinner Party</span>
+                    </a>
+                </div>
+                <div class="project project--frank">
+                  <a href="https://github.com/FrankenStyle/franken-style-new" target="_blank" class="project__link">
+                    <span class="icon-text">FrankenStyle</span>
+                  </a>
+                </div>
+                <div class="project project--bubbles">
+                  <a href="https://thought-bubbles.herokuapp.com/" target="_blank" class="project__link">
+                    <span class="icon-text">Thought<br/> Bubbles</span>
+                  </a>
+                </div>
+                <div class="project project--laptop">
+                    <a href="https://jffhtchr.github.io/flexbox-laptop/" target="_blank" class="project__link">
+                      <span class="icon-text">Flexbox <br/>Laptop</span>
+                    </a>
+                </div>
+                <div class="project project--music">
+                  <a href="http://jeffhatchermusic.com" target="_blank" class="project__link">
+                    <span class="icon-text">Jeff Hatcher Music</span>
+                  </a>
+                </div>
+            </div> 
+          </div>
+          <div class="jeff-container">
+          </div>
+          <div class="text-container animated fadeIn">
+            <div class="text--copy">
+                hello, i'm <span class="text--kenny">kenny</span>. i like to create <span class="text--reveal">things</span>. let's make something <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank"><span class="text--together">together</span></a>.
+            </div>  
+          </div>
+          <div class="footer-container animated fadeIn">
+            <div class="icons">
+                <a href="https://github.com/kenny-johnson-nyc/" target="_blank">
+                    <img src="./imgs/github.png">
+                </a> 
+            </div>
+        </div>
+      </div>
+    </div>
+  </body>
+ 
+</html>
