--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
     <link rel="icon" type="image/png"  href="./imgs/favicon.png"> 
     <script type="text/javascript" src="./script.js"></script>
+ 
   </head> 
 
   <body>
+    <canvas id='canvas1'></canvas>
+    <script type="text/javascript" src="./matrixrain.js"></script>
       <div class="wrapper">
         <div class="main-content">
           <div class="logo-container animated js-fade-in">
