--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     kenny johnson
                   </div>
                   <div class="logo__subtitle">
-                    software engineer <a href="http://www.jeffhatchermusic.com" class="logo__drummer" target="blank">/ musician</a>
+                    software engineer <a href="https://oakandcherry.bandcamp.com/" class="logo__musician" target="blank">/ musician</a>
                   </div>
               </div>
           </div>
