--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
           <div class="text-container animated fadeIn">
             <div class="text--copy">
-                hello, i'm <span class="text--kenny">kenny</span>. i like to create <span class="text--reveal"><a href="https://kenny-johnson-nyc.github.io/dscovr_ace_visualizer/index.html">things</span>. let's make something <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank"><span class="text--together">together</span></a>.
+                hello, i'm <span class="text--kenny">kenny</span>. i like to create <span class="text--reveal">things</span>. let's make something <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank"><span class="text--together">together</span></a>.
             </div>  
           </div>
           <div class="footer-container animated fadeIn">
