--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500;300;200;100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
     <link rel="icon" type="image/png"  href="./imgs/favicon.png"> 
-    <script type="text/javascript" src="./script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
@@ -32,7 +31,7 @@
                     kenny johnson
                   </div>
                   <div class="logo__subtitle">
-                    software engineer <a href="https://oakandcherry.bandcamp.com/" class="logo__musician" target="blank">/ musician</a>
+                    web developer <a href="https://oakandcherry.bandcamp.com/" class="logo__musician" target="blank">/ musician</a>
                   </div>
               </div>
           </div>
@@ -82,6 +81,7 @@
       </div>
     </div>
     <script type="text/javascript" src="./matrixrain.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
   </body>
  
 </html>
