--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
     <link rel="manifest" href="./favicon_io/site.webmanifest">
-    <title>Kenny Johnson - Software Engineer </title>
+    <title>Kenny Johnson - Web Developer </title>
     <link rel="stylesheet" href="./style.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
                     kenny johnson
                   </div>
                   <div class="logo__subtitle">
-                    software engineer <a href="https://oakandcherry.bandcamp.com/" class="logo__musician" target="blank">/ musician</a>
+                    web developer <a href="https://oakandcherry.bandcamp.com/" class="logo__musician" target="blank">/ musician</a>
                   </div>
               </div>
           </div>
