commit on 'main'

--- a/index.html
+++ b/index.html
@@ -38,37 +38,18 @@
           <div class="projects-container">
             <div class="projects">
                 <div class="project project--drama">
-                    <a href="https://github.com/kenny-johnson-nyc/drama_free_dinner_party" target="_blank" class="project__link">
+                    <a href="" target="_blank" class="project__link">
                       <span class="icon-text">Drama-Free Dinner Party</span>
                     </a>
                 </div>
-                <div class="project project--frank">
-                  <a href="https://github.com/FrankenStyle/franken-style-new" target="_blank" class="project__link">
-                    <span class="icon-text">FrankenStyle</span>
-                  </a>
-                </div>
-                <div class="project project--bubbles">
-                  <a href="https://thought-bubbles.herokuapp.com/" target="_blank" class="project__link">
-                    <span class="icon-text">Thought<br/> Bubbles</span>
-                  </a>
-                </div>
-                <div class="project project--laptop">
-                    <a href="https://jffhtchr.github.io/flexbox-laptop/" target="_blank" class="project__link">
-                      <span class="icon-text">Flexbox <br/>Laptop</span>
-                    </a>
-                </div>
-                <div class="project project--music">
-                  <a href="http://jeffhatchermusic.com" target="_blank" class="project__link">
-                    <span class="icon-text">Jeff Hatcher Music</span>
-                  </a>
-                </div>
+                
             </div> 
           </div>
-          <div class="jeff-container">
+          <div class="kenny-container">
           </div>
           <div class="text-container animated fadeIn">
             <div class="text--copy">
-                hello, i'm <span class="text--kenny">kenny</span>. i like to create <span class="text--reveal">things</span>. let's make something <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank"><span class="text--together">together</span></a>.
+                hello, i'm <span class="text--kenny">kenny</span>. i like to create things. let's make something <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank"><span class="text--together">together</span></a>.
             </div>  
           </div>
           <div class="footer-container animated fadeIn">
