Switch to Fullstack Portfolio project

--- a/index.html
+++ b/index.html
@@ -1,68 +1,45 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="./favicon_io/site.webmanifest">
-    <title>Kenny Johnson - Web Developer </title>
-    <link rel="stylesheet" href="./style.css" type="text/css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500;300;200;100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
-    <link rel="icon" type="image/png"  href="./imgs/favicon.png"> 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
- 
-  </head> 
+<html lang="en">
 
-  <body>
-    <canvas id='canvas1'></canvas>
-  
-      <div class="wrapper">
-        <div class="main-content">
-          <div class="logo-container animated js-fade-in">
-              <div class="logo">
-                  <div class="logo__header">
-                    kenny johnson
-                  </div>
-                  <div class="logo__subtitle">
-                    web developer <a href="https://oakandcherry.bandcamp.com/" class="logo__musician" target="blank">/ musician</a>
-                  </div>
-              </div>
-          </div>
-          <div class="projects-container">
-            <div class="projects">
-                <div class="project project--drama">
-                    <a href="" target="_blank" class="project__link">
-                      <span class="icon-text">Drama-Free Dinner Party</span>
-                    </a>
-                </div>
-                
-            </div> 
-          </div>
-          <div class="kenny-container">
-          </div>
-          <div class="text-container animated fadeIn">
-            <div class="text--copy">
-                hello, i'm <span class="text--kenny">kenny</span>. i like to create things. let's make something <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank"><span class="text--together">together</span></a>.
-            </div>  
-          </div>
-          <div class="footer-container animated fadeIn">
-            <div class="icons">
-                <a href="https://github.com/kenny-johnson-nyc/" target="_blank">
-                    <img src="./imgs/github.png">
-                </a> 
-            </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kenny Johnson Designer/Developer Portfolio</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,400;1,700&display=swap"
+        rel="stylesheet">
+
+</head>
+
+<body>
+    <header>
+        <nav class="main-nav">
+            <ul class="horizontal nav-list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1 class="name-logo">Kenny Johnson</h1>
+        <div class="coffee-text-container">
+            <p class="coffee-text">I like making coffee and fun websites. </p>
         </div>
-      </div>
-    </div>
-    <script type="text/javascript" src="./matrixrain.js"></script>
-    <script type="text/javascript" src="./script.js"></script>
-  </body>
- 
+        <figure class="coffee-container">
+            <a class="coffee-link" href="about.html"><i class="material-icons md-48">coffee_maker</i></a>
+        </figure>
+    </main>
+
+    <footer>
+        <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank"><img alt="retro email gif" src="imgs/email.gif"/></a>
+    </footer>
+
+</body>
+
 </html>
