--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenny Johnson Designer/Developer Portfolio</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,400;1,700&display=swap"
@@ -30,15 +30,24 @@
     <main>
         <h1 class="name-logo">Kenny Johnson</h1>
         <div class="coffee-text-container">
-            <p class="coffee-text">I like making coffee and fun websites.  </p>
+            <h2 class="coffee-text">I like making coffee and fun websites. </h2>
+            <figure class="coffee-container">
+                <a class="coffee-link" href="about.html"><i class="material-icons md-48">coffee_maker</i></a>
+                <ul>
+                    <h3>Here's an unordered list or reasons why</h3>
+                    <li>Tastes good</li>
+                    <li>Smells good</li>
+                    <li>Brown</li>
+                    <li>Cold or hot, still good</li>
+                </ul>
+            </figure>
+
         </div>
-        <figure class="coffee-container">
-            <a class="coffee-link" href="about.html"><i class="material-icons md-48">coffee_maker</i></a>
-        </figure>
     </main>
 
     <footer>
-        <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank"><img alt="retro email gif" src="imgs/email.gif"/></a>
+        <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank"><img alt="retro email gif"
+                src="imgs/email.gif" /></a>
     </footer>
 
 </body>
