Mostly working, portfolio button broken mobile

--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
     </main>
 
     <footer>
-        <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank"><img alt="retro email gif"
-                src="imgs/email.gif" /></a>
+        <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank">
+            <img alt="retro email gif" src="imgs/email.gif" />
+            <span>mailto:kenny.johnson.nyc@gmail.com</span>
+            
+             <!-- GIF courtesy of https://gifcities.org/ -->
+        </a>
     </footer>
 
 </body>
