--- a/about.html
+++ b/about.html
@@ -21,18 +21,21 @@
         <nav class="main-nav">
             <ul class="horizontal nav-list">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="about.html">About</a></li>
+                
             </ul>
         </nav>
 
     </header>
     <main>
-        <h1 class="name-logo">KENNY JOHNSON</h1>
+        <h1 class="name-logo">Kenny Johnson</h1>
         <div class="about-wrapper">
             <figure class="about-img-bg">
                 <img alt="portrait photo of kenny with forest background" class="about-img" src="imgs/kenny.JPG" />
+                
             </figure>
+            <figcaption>Me in my homestate of Colorado. Credit: Jules Miranda @julesandfilm</figcaption>
             <div class="about-text-wrapper">
                 <p class="about-text">I just really like coffee and websites
                     yayyyyyyyyyyyyyyyyyyyyyyyyyyyayayayayayayayyayay</p>
