More or less working

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="about.html">About</a></li>
-                
+
             </ul>
         </nav>
     </header>
@@ -48,10 +48,9 @@
 
     <footer>
         <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank">
+            <!-- GIF courtesy of https://gifcities.org/ -->
             <img alt="retro email gif" src="imgs/email.gif" />
-            <span>mailto:kenny.johnson.nyc@gmail.com</span>
-            
-             <!-- GIF courtesy of https://gifcities.org/ -->
+            <span style="display: block;">mailto:kenny.johnson.nyc@gmail.com</span>
         </a>
     </footer>
 
