hard to find blue bg

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h3>Here's an unordered list or reasons why</h3>
                     <li>Tastes good</li>
                     <li>Smells good</li>
-                    <li>Brown</li>
+                    <li><span style="color: saddlebrown">Brown</style></li>
                     <li>Cold or hot, still good</li>
                 </ul>
             </figure>
