Cleaned up, need copy

--- a/about.html
+++ b/about.html
@@ -44,7 +44,11 @@
     </main>
 
     <footer>
-        <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank"><img alt="retro email gif" src="imgs/email.gif"/></a>
+        <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank">
+            <!-- GIF courtesy of https://gifcities.org/ -->
+            <img alt="retro email gif" src="imgs/email.gif" />
+            <span style="display: block;">mailto:kenny.johnson.nyc@gmail.com</span>
+        </a>
     </footer>
 </body>
 
