--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
     </header>
 
     <main>
-        <h1 class="name-logo">Kenny Johnson</h1>
+        <h1 class="name-logo"><a href="#">Kenny Johnson</a></h1>
         <div class="coffee-text-container">
             <h2 class="coffee-text">I like making coffee and fun websites. </h2>
+            <p>This site uses the pseudo element :hover all over the place.</p>
             <figure class="coffee-container">
                 <a class="coffee-link" href="about.html"><i class="material-icons md-48">coffee_maker</i></a>
                 <ul>
-                    <h3>Here's an unordered list or reasons why</h3>
+                    <h3>Here's an unordered list of reasons why:</h3>
                     <li>Tastes good</li>
                     <li>Smells good</li>
                     <li><span style="color: saddlebrown">Brown</style></li>
