Removed position: relative from .port-wrapper

--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
     <footer>
         <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank">
             <!-- GIF courtesy of https://gifcities.org/ -->
+            <span style="display: block;">Send me an email</span>
             <img alt="retro email gif" src="imgs/email.gif" />
-            <span style="display: block;">mailto:kenny.johnson.nyc@gmail.com</span>
         </a>
     </footer>
 </body>
