--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,19 @@
     <main>
         <h1 class="name-logo">Kenny Johnson</h1>
         <section class="port-wrapper">
-            <h2 class="port-title">Portfolio</h2>
+            <h2 class="port-title">Portfolio</h2><hr>
+            <p class="port-text">This is Freddie and she's a cat. </p>
             <img alt="black cat sleeping under red blanket on couch" class="port-img" src="imgs/kitty.jpeg" />
             <div class="port-text-wrapper">
-                <p class="port-text">This is Freddie and she's a cat. </p>
+                
+            </div>
+        </section>
+        <section class="port-wrapper">
+            <h2 class="port-title">Portfolio</h2><hr>
+            <p class="port-text">This is Freddie and she's a cat. </p>
+            <img alt="black cat sleeping under red blanket on couch" class="port-img" src="imgs/kitty.jpeg" />
+            <div class="port-text-wrapper">
+                
             </div>
         </section>
     </main>
@@ -42,8 +51,8 @@
     <footer>
         <a href="mailto:kenny.johnson.nyc@gmail.com" target="_blank">
             <!-- GIF courtesy of https://gifcities.org/ -->
+            <span style="display: block;">Send me an email</span>
             <img alt="retro email gif" src="imgs/email.gif" />
-            <span style="display: block;">mailto:kenny.johnson.nyc@gmail.com</span>
         </a>
     </footer>
 
