Added Lashonda, fixed JPGs to jpegs

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         <h1 class="name-logo">Kenny Johnson</h1>
         <div class="about-wrapper">
             <figure class="about-img-bg">
-                <img alt="portrait photo of kenny with forest background" class="about-img" src="imgs/kenny.JPG" />
+                <img alt="portrait photo of kenny with forest background" class="about-img" src="imgs/kenny.jpeg" />
                 
             </figure>
             <figcaption>Me in my homestate of Colorado. Credit: Jules Miranda @julesandfilm</figcaption>
