--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     <main>
         <h1 class="name-logo">Kenny Johnson</h1>
         <section class="port-wrapper">
-            <h2 class="port-title">Portfolio</h2><hr>
+            <h2 class="port-title">Freddie</h2><hr>
             <p class="port-text">This is Freddie and she's a cat. </p>
             <img alt="black cat sleeping under red blanket on couch" class="port-img" src="imgs/kitty.jpeg" />
             <div class="port-text-wrapper">
@@ -39,9 +39,9 @@
             </div>
         </section>
         <section class="port-wrapper">
-            <h2 class="port-title">Portfolio</h2><hr>
-            <p class="port-text">This is Freddie and she's a cat. </p>
-            <img alt="black cat sleeping under red blanket on couch" class="port-img" src="imgs/kitty.jpeg" />
+            <h2 class="port-title">Lashonda</h2><hr>
+            <p class="port-text">This is Lashonda and she's a cat too. </p>
+            <img alt="black cat sleeping under red blanket on couch" class="port-img" src="imgs/kitty2.jpeg" />
             <div class="port-text-wrapper">
                 
             </div>
