--- a/portfolio.html
+++ b/portfolio.html
@@ -33,17 +33,17 @@
         <section class="port-wrapper">
             <h2 class="port-title">Freddie</h2><hr>
             <p class="port-text">This is Freddie and she's a cat. </p>
-            <img alt="black cat sleeping under red blanket on couch" class="port-img" src="imgs/kitty.jpeg" />
+            <img alt="black cat sleeping under blankets on couch" class="port-img" src="imgs/kitty.jpeg" />
             <div class="port-text-wrapper">
-                
+                <p class="port-text">ASdfasd;lfkasldkfj;alskdfj; ;alskdjf;alsdkfj ;alskdfj ;lksajdf </p>
             </div>
         </section>
         <section class="port-wrapper">
             <h2 class="port-title">Lashonda</h2><hr>
             <p class="port-text">This is Lashonda and she's a cat too. </p>
-            <img alt="black cat sleeping under red blanket on couch" class="port-img" src="imgs/kitty2.jpeg" />
+            <img alt="intense torti cat staring at camera" class="port-img" src="imgs/kitty2.jpeg" />
             <div class="port-text-wrapper">
-                
+                ASdfasd;lfkasldkfj;alskdfj; ;alskdjf;alsdkfj ;alskdfj ;lksajdf 
             </div>
         </section>
     </main>
