--- a/index.html
+++ b/index.html
@@ -31,16 +31,17 @@
     <main>
         <h1 class="name-logo"><a href="#">Kenny Johnson</a></h1>
         <div class="coffee-text-container">
-            <h2 class="coffee-text">I like making coffee and fun websites. </h2>
-            <p>This site uses the pseudo element :hover all over the place.</p>
+            <h2 class="coffee-text">I like making coffee and fun websites. </h2><br><hr><br>
+            <p>This site uses the pseudo element :hover all over the place. Probably too much. I hope you like it. </p>
             <figure class="coffee-container">
-                <a class="coffee-link" href="about.html"><i class="material-icons md-48">coffee_maker</i></a>
+                <a class="coffee-link" href="portfolio.html"><i class="material-icons md-48">coffee_maker</i></a>
                 <ul>
-                    <h3>Here's an unordered list of reasons why:</h3>
-                    <li>Tastes good</li>
-                    <li>Smells good</li>
-                    <li><span style="color: saddlebrown">Brown</style></li>
-                    <li>Cold or hot, still good</li>
+                    <h3>Here's an unordered list of reasons why coffee is great:</h3><br>
+                    <li>Tastes good.</li>
+                    <li>Smells good.</li>
+                    <li>Cold or hot, still good.</li>
+                    <li><span style="color: saddlebrown">Brown.</style></li>
+                    
                 </ul>
             </figure>
 
