--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 
     <main>
         <h1 class="name-logo"><a href="#">Kenny Johnson</a></h1>
+        <h2> Web Designer/Developer </h2>
         <div class="coffee-text-container">
-            <h2 class="coffee-text">I like making coffee and fun websites. </h2><br><hr><br>
+            <h3 class="coffee-text">I like making coffee and fun websites. </h3><br><hr><br>
             <p>This site uses the pseudo element :hover all over the place. Probably too much. I hope you like it. </p>
             <figure class="coffee-container">
                 <a class="coffee-link" href="portfolio.html"><i class="material-icons md-48">coffee_maker</i></a>
