--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <main>
         <h1 class="name-logo"><a href="#">Kenny Johnson</a></h1>
-        <h2> Web Designer/Developer </h2>
+        <h2 class="sub-heading"> Web Designer/Developer </h2>
         <div class="coffee-text-container">
             <h3 class="coffee-text">I like making coffee and fun websites. </h3><br><hr><br>
             <p>This site uses the pseudo element :hover all over the place. Probably too much. I hope you like it. </p>
