Fixed home links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-        <h1 class="name-logo"><a href="#">Kenny Johnson</a></h1>
+        <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
         <h2 class="sub-heading"> Web Designer/Developer </h2>
         <div class="coffee-text-container">
             <h3 class="coffee-text">I like making coffee and fun websites. </h3><br><hr><br>
