--- a/about.html
+++ b/about.html
@@ -23,13 +23,12 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="about.html">About</a></li>
-                
             </ul>
         </nav>
 
     </header>
     <main>
-        <h1 class="name-logo">Kenny Johnson</h1>
+        <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
         <div class="about-wrapper">
             <figure class="about-img-bg">
                 
