--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-        <h1 class="name-logo">Kenny Johnson</h1>
+        <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
         <section class="port-wrapper">
             <h2 class="port-title">Freddie</h2><hr>
             <p class="port-text">This is Freddie and she's a cat. </p>
