--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
         <h2 class="sub-heading"> Web Designer/Developer </h2>
         <div class="coffee-text-container">
-            <h3 class="coffee-text">I like making coffee and fun websites. </h3><br><hr><br>
+            <h3 class="coffee-text">I like making coffee and fun websites. </h3><br>
+            <hr><br>
             <p>This site uses the pseudo element :hover all over the place. Probably too much. I hope you like it. </p>
             <figure class="coffee-container">
                 <a class="coffee-link" href="portfolio.html"><i class="material-icons md-48">coffee_maker</i></a>
@@ -41,8 +42,9 @@
                     <li>Tastes good.</li>
                     <li>Smells good.</li>
                     <li>Cold or hot, still good.</li>
-                    <li><span style="color: saddlebrown">Brown.</style></li>
-                    
+                    <li><span style="color: saddlebrown">Brown.</style>
+                    </li>
+
                 </ul>
             </figure>
 
