--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="css/portfolio.css">
-    <link rel="stylesheet" href="css/style.css"> 
-    
+    <link rel="stylesheet" href="css/style.css">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,400;1,700&display=swap"
         rel="stylesheet">
-   
+
 </head>
 
 <body>
@@ -31,18 +31,29 @@
     <main>
         <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
         <section class="port-wrapper">
-            <h2 class="port-title">Freddie</h2><hr>
+            <h2 class="port-title">Freddie</h2>
+            <hr>
             <p class="port-text">This is Freddie and she's a cat. </p>
             <img alt="black cat sleeping under blankets on couch" class="port-img" src="imgs/kitty.jpeg" />
             <div class="port-text-wrapper">
-                <p class="port-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut porttitor ex. Vestibulum malesuada, dui in varius hendrerit, turpis metus blandit sapien, a accumsan diam sapien eget nunc. Nullam mi elit, consequat eget dictum quis, blandit sit amet nisl. Maecenas at ultrices lectus. Curabitur mi orci, aliquet vel nunc porta, molestie laoreet justo. Donec scelerisque nunc magna, vitae commodo purus pulvinar non. Vivamus sit amet suscipit risus. Curabitur a commodo arcu, vel egestas lectus. Nunc sem justo, fringilla laoreet lobortis in, bibendum feugiat magna.</p>
+                <p class="port-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut porttitor ex.
+                    Vestibulum malesuada, dui in varius hendrerit, turpis metus blandit sapien, a accumsan diam sapien
+                    eget nunc. Nullam mi elit, consequat eget dictum quis, blandit sit amet nisl. Maecenas at ultrices
+                    lectus. Curabitur mi orci, aliquet vel nunc porta, molestie laoreet justo. Donec scelerisque nunc
+                    magna, vitae commodo purus pulvinar non. Vivamus sit amet suscipit risus. Curabitur a commodo arcu,
+                    vel egestas lectus. Nunc sem justo, fringilla laoreet lobortis in, bibendum feugiat magna.</p>
             </div>
 
-            <h2 class="port-title">Lashonda</h2><hr>
+            <h2 class="port-title">Lashonda</h2>
+            <hr>
             <p class="port-text">This is Lashonda and she's a cat too. </p>
             <img alt="intense torti cat staring at camera" class="port-img" src="imgs/kitty2.jpeg" />
             <div class="port-text-wrapper">
-                Pellentesque accumsan pretium magna nec semper. Pellentesque eu mollis risus. Curabitur nec magna non nunc condimentum eleifend. Donec euismod malesuada quam, sed faucibus risus. Duis tincidunt maximus neque, in convallis arcu imperdiet vel. Maecenas ac arcu et orci accumsan tincidunt. Donec facilisis rutrum mauris, nec consectetur mi pulvinar sed. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec commodo urna vitae pulvinar aliquet.            </div>
+                Pellentesque accumsan pretium magna nec semper. Pellentesque eu mollis risus. Curabitur nec magna non
+                nunc condimentum eleifend. Donec euismod malesuada quam, sed faucibus risus. Duis tincidunt maximus
+                neque, in convallis arcu imperdiet vel. Maecenas ac arcu et orci accumsan tincidunt. Donec facilisis
+                rutrum mauris, nec consectetur mi pulvinar sed. Interdum et malesuada fames ac ante ipsum primis in
+                faucibus. Donec commodo urna vitae pulvinar aliquet. </div>
         </section>
     </main>
 
