added guessing game

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,15 @@
     <main>
         <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
         <section class="port-wrapper">
+            <h2 class="port-title">Guessing Game</h2>
+            <hr>
+            <p class="port-text">Good luck...</p>
+           <a href="guessing-game/index.html" target="_blank" rel="noopener noreferrer"><img alt="baldman AI generated" class="port-img" src="imgs/baldman.png" /></a> 
+            <div class="port-text-wrapper">
+                <p class="port-text"></p>
+            </div>
+        </section>
+        <section class="port-wrapper">
             <h2 class="port-title">Freddie</h2>
             <hr>
             <p class="port-text">This is Freddie and she's a cat. </p>
@@ -43,7 +52,8 @@
                     magna, vitae commodo purus pulvinar non. Vivamus sit amet suscipit risus. Curabitur a commodo arcu,
                     vel egestas lectus. Nunc sem justo, fringilla laoreet lobortis in, bibendum feugiat magna.</p>
             </div>
-
+        </section>
+        <section class="port-wrapper">
             <h2 class="port-title">Lashonda</h2>
             <hr>
             <p class="port-text">This is Lashonda and she's a cat too. </p>
@@ -54,7 +64,7 @@
                 neque, in convallis arcu imperdiet vel. Maecenas ac arcu et orci accumsan tincidunt. Donec facilisis
                 rutrum mauris, nec consectetur mi pulvinar sed. Interdum et malesuada fames ac ante ipsum primis in
                 faucibus. Donec commodo urna vitae pulvinar aliquet. </div>
-        </section>
+            </section>
     </main>
 
     <footer>
