--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
             <h2 class="port-title">Guessing Game</h2>
             <hr>
             <p class="port-text">Good luck...</p>
-           <a href="/game/index.html" target="_blank" rel="noopener noreferrer"><img alt="baldman AI generated" class="port-img" src="imgs/baldman.png" /></a> 
+           <a href="game/index.html" target="_blank" rel="noopener noreferrer"><img alt="baldman AI generated" class="port-img" src="imgs/baldman.png" /></a> 
             <div class="port-text-wrapper">
                 <p class="port-text"></p>
             </div>
