Added whack-a-mole to portfolio, changed game folder to guessing

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,21 @@
     <main>
         <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
         <section class="port-wrapper">
+            <h2 class="port-title">Whack-A-Mole</h2>
+            <hr>
+            <p class="port-text">Get those moles</p>
+            <a href="mole/index.html" target="_blank" rel="noopener noreferrer"><img alt="baldman AI generated"
+                    class="port-img" src="imgs/mole-bg.jpeg" /></a>
+            <div class="port-text-wrapper">
+                <p class="port-text"></p>
+            </div>
+        </section>
+        <section class="port-wrapper">
             <h2 class="port-title">Guessing Game</h2>
             <hr>
             <p class="port-text">Good luck...</p>
-           <a href="game/index.html" target="_blank" rel="noopener noreferrer"><img alt="baldman AI generated" class="port-img" src="imgs/baldman.png" /></a> 
+            <a href="guessing/index.html" target="_blank" rel="noopener noreferrer"><img alt="baldman AI generated"
+                    class="port-img" src="imgs/baldman.png" /></a>
             <div class="port-text-wrapper">
                 <p class="port-text"></p>
             </div>
@@ -64,7 +75,7 @@
                 neque, in convallis arcu imperdiet vel. Maecenas ac arcu et orci accumsan tincidunt. Donec facilisis
                 rutrum mauris, nec consectetur mi pulvinar sed. Interdum et malesuada fames ac ante ipsum primis in
                 faucibus. Donec commodo urna vitae pulvinar aliquet. </div>
-            </section>
+        </section>
     </main>
 
     <footer>
