--- a/portfolio.html
+++ b/portfolio.html
@@ -4,11 +4,11 @@
 <head>
     <link rel="stylesheet" href="css/portfolio.css">
     <link rel="stylesheet" href="css/style.css">
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenny Johnson Designer/Developer Portfolio</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
