More styling added, comments cleaned. Removed getTimeLeft function

--- a/mole/index.html
+++ b/mole/index.html
@@ -24,6 +24,7 @@
     <button onclick="startGame()" class="start-button">LET'S WHACK <span class="material-symbols-outlined">
         hardware
       </span></button>
+    <h3>Try to whack at least 6 moles in 10 seconds</h3>
     <p id="countdown"></p>
     <button onClick="window.location.reload();" class="reset-button">RESTART
       <span class="material-symbols-outlined">
