Added bookshelf link to portfolio

--- a/index.html
+++ b/index.html
@@ -33,21 +33,18 @@
         <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
         <h2 class="sub-heading"> Web Designer/Developer </h2>
         <div class="coffee-text-container">
-            <h3 class="coffee-text">I like making coffee and fun websites. </h3><br>
+            <br>
             <hr><br>
-            <p>This site uses the pseudo element :hover all over the place. Probably too much. I hope you like it. </p>
             <figure class="coffee-container">
                 <a class="coffee-link" href="portfolio.html"><i class="material-icons md-48">coffee_maker</i></a>
                 <ul>
-                    <h3>Here's an unordered list of reasons why coffee is great:</h3><br>
-                    <li>Tastes good.</li>
-                    <li>Smells good.</li>
-                    <li>Cold or hot, still good.</li>
-                    <li><span style="color: saddlebrown">Brown.</style>
-                    </li>
-
                 </ul>
+                <h3 class="coffee-text">Hi, I'm Kenny and I like making fun and interesting websites for people. </h3>
+                <br>
+                <br>
+                <hr>
             </figure>
+
 
         </div>
     </main>
