--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,20 @@
     <main>
         <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
         <section class="port-wrapper">
+            <h2 class="port-title">Bookshelf</h2>
+            <hr>
+            <p class="port-text">Got books?</p>
+            <a href="bookshelf2/index2.html" target="_blank" rel="noopener noreferrer"><img alt="bookshelf"
+                    class="port-img" src="bookshelf2/img/bookshelf-bg.jpg" /></a>
+            <div class="port-text-wrapper">
+                <p class="port-text"></p>
+            </div>
+        </section>
+        <section class="port-wrapper">
             <h2 class="port-title">Whack-A-Mole</h2>
             <hr>
             <p class="port-text">Get those moles</p>
-            <a href="mole/index.html" target="_blank" rel="noopener noreferrer"><img alt="baldman AI generated"
+            <a href="mole/index.html" target="_blank" rel="noopener noreferrer"><img alt="mole lawn house"
                     class="port-img" src="imgs/mole-bg.jpeg" /></a>
             <div class="port-text-wrapper">
                 <p class="port-text"></p>
