Removed About nav from all pages

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </nav>
     </header>
 
-    <main>
-        <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
+    <main >
+        <h1 class="name-logo slide-anim"><a href="/">Kenny Johnson</a></h1>
         <h2 class="sub-heading"> Web Designer/Developer </h2>
         <div class="coffee-text-container">
             <br>
