Updated test build

--- a/visualizer/testbuild/index.html
+++ b/visualizer/testbuild/index.html
@@ -14,6 +14,7 @@
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <script src="https://code.highcharts.com/highcharts-3d.js"></script>
+  <!-- <script src="https://code.highcharts.com/modules/series-label.js"></script> -->
   <script src="https://code.highcharts.com/modules/exporting.js"></script>
   <script src="https://code.highcharts.com/modules/export-data.js"></script>
   <script src="https://code.highcharts.com/modules/accessibility.js"></script>
@@ -54,21 +55,21 @@
       </p>
     </figure>
 
-    <button class="center-button" onclick="centerChart()">RECENTER</button>
+    <!-- <button class="center-button" onclick="centerChart()">RECENTER</button> -->
 
 
 
     <!-- DARKMODE -->
     <!-- Rounded switch -->
 
-    <label class="switch">
+    <!-- <label class="switch">
       <input id="dark-mode-checkbox" type="checkbox" onchange="darkMode(this)">
       <span id="checkbox-text" class="slider round">
       </span>
-      <!-- label element -->
-      <span class="labels" data-on="ON" data-off="OFF">
+      label element -->
+      <!-- <span class="labels" data-on="ON" data-off="OFF">
       </span>
-    </label>
+    </label> --> 
 
     <!-- INFO -->
 
@@ -114,6 +115,19 @@
         </li>
       </ul>
     </div>
+
+    <!-- Ecliptic is a 2d plane that cust through the sun. Aligned along the sun's equator. 
+    
+    GSE 0 is at Earth.
+    X = Sun-Earth line
+    Y = Sun Earth ecliptic
+    Z = Up Down
+
+    RLP 0 is at L1
+  
+
+  
+  -->
 
     <!-- FOOTER -->
 
