--- a/visualizer/testbuild/index.html
+++ b/visualizer/testbuild/index.html
@@ -14,7 +14,7 @@
 
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <script src="https://code.highcharts.com/highcharts-3d.js"></script>
-  <!-- <script src="https://code.highcharts.com/modules/series-label.js"></script> -->
+  <script src="https://code.highcharts.com/modules/series-label.js"></script>
   <script src="https://code.highcharts.com/modules/exporting.js"></script>
   <script src="https://code.highcharts.com/modules/export-data.js"></script>
   <script src="https://code.highcharts.com/modules/accessibility.js"></script>
@@ -134,7 +134,7 @@
     <div class="footer">
       <p>Built by Kenny Johnson 2022</p>
     </div>
-    
+
     <script src="script3.js"></script>
 
 </body>
