--- a/visualizer/testbuild/index.html
+++ b/visualizer/testbuild/index.html
@@ -55,6 +55,12 @@
       </p>
     </figure>
 
+    <figure class="highcharts-figure2">
+      <div id="container2"></div>
+      <p class="highcharts-description2">
+      </p>
+    </figure>
+
     <!-- <button class="center-button" onclick="centerChart()">RECENTER</button> -->
 
 
