Added satellite to projects, changed portfolio to projects everywhere

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="main-nav">
             <ul class="horizontal nav-list">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="projects.html">Portfolio</a></li>
 
             </ul>
         </nav>
@@ -35,7 +35,7 @@
             <br>
             <hr><br>
             <figure class="coffee-container">
-                <a class="coffee-link" href="portfolio.html"><i class="material-icons md-48">coffee_maker</i></a>
+                <a class="coffee-link" href="projects.html"><i class="material-icons md-48">coffee_maker</i></a>
                 <ul>
                 </ul>
                 <h3 class="coffee-text">Hi, I'm Kenny and I like making fun and interesting websites for people. </h3>
