--- a/visualizer/testbuild/index.html
+++ b/visualizer/testbuild/index.html
@@ -140,8 +140,9 @@
     <div class="footer">
       <p>Built by Kenny Johnson 2022</p>
     </div>
-
-    <script src="script3.js"></script>
+<!-- 
+    <script src="script3.js"></script> -->
+    <script src="test.js"></script>
 
 </body>
 
