Removed Portfolio from titles

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewproj" content="width=device-width, initial-scale=1.0">
-    <title>Kenny Johnson Designer/Developer projfolio</title>
+    <title>Kenny Johnson Designer/Developer</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,7 @@
             </h2>
             <hr>
             <p class="proj-text">Roast my commits 🔥</p>
-            <a href="bookshelf2/index2.html" target="_blank" rel="noopener noreferrer"><img alt="bookshelf"
+            <a href="testbuild-stable/index.html" target="_blank" rel="noopener noreferrer"><img alt="bookshelf"
                     class="proj-img" src="imgs/visualizer.png" /></a>
             <div class="proj-text-wrapper">
                 <p class="proj-text"></p>
