--- a/testbuild-stable/index.html
+++ b/testbuild-stable/index.html
@@ -55,7 +55,11 @@
       </p>
     </figure>
 
-  
+    <figure class="highcharts-figure2">
+      <div id="container2"></div>
+      <p class="highcharts-description2">
+      </p>
+    </figure>
 
     <!-- <button class="center-button" onclick="centerChart()">RECENTER</button> -->
 
@@ -136,9 +140,8 @@
     <div class="footer">
       <p>Built by Kenny Johnson 2022</p>
     </div>
-<!-- 
-    <script src="script3.js"></script> -->
-    <script src="test.js"></script>
+
+    <script src="script3.js"></script>
 
 </body>
 
